fix #19 conflict between cols and navbar when bigger is TRUE (remove align center css rule)

--- a/inst/framework7-5.3.0/grid-extra.css
+++ b/inst/framework7-5.3.0/grid-extra.css
@@ -1,6 +1,6 @@
 div[class*="col"] {
   /*background: #fff;*/
-  text-align: center;
+  /*text-align: center;*/
   /*border: 1px; solid #ddd;*/
   padding: 5px;
   font-size: 12px;
